[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AERISDEV"
version = "1.0.3"
description = "AERISDEV Personal and meme package (dont use this it is meant as a joke) \n also this contains unsafe to run code"
authors = [
    {name = "AERISDEV", email = "jfr@phnx.lol"},
]
requires-python = ">=3.9"
